--- a/config
+++ b/config
@@ -2,6 +2,7 @@
 #defaults
 VM_RAM=2048 #in Mb
 VM_CPU=1
+VM_DISK_SIZE="16G"
 IMAGEDIR="$PWD/images" #where to store base images for cloning
 DATADIR="$PWD/disks" #where to store disk images
 VM_IMAGE="$IMAGEDIR/base.qcow2" #default image to clone when none is specified
